--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "connector-plugin-seed",
-  "description": "Connector Plugin seed project for the Reekoh IoT Platform. Helps engineers to start developing connector plugins for the Reekoh IoT Platform.",
+  "name": "servicenow-connector",
+  "description": "ServiceNow Connector Plugin seed project for the Reekoh IoT Platform.",
   "version": "1.0.0",
   "author": "Reekoh, Inc.",
   "main": "app.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Reekoh/connector-plugin-seed"
+    "url": "https://github.com/Reekoh/servicenow-connector"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
