--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "servicenow-connector",
   "description": "ServiceNow Connector Plugin for the Reekoh IoT Platform.",
-  "version": "1.0.3",
+  "version": "1.0.0",
   "author": "Reekoh, Inc.",
   "main": "app.js",
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp lint"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
     "lodash.isempty": "^4.2.1",
     "lodash.isplainobject": "^4.0.4",
     "node-uuid": "^1.4.7",
+    "reekoh": "^1.0.2",
     "request": "^2.72.0"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "gulp-json-lint": "^0.1.0",
     "gulp-mocha": "^2.2.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-standard": "^8.0.4",
     "mocha": "^2.4.5",
     "should": "^8.3.0"
   },
