--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
     "url": "https://github.com/Reekoh/servicenow-connector"
   },
   "dependencies": {
-    "async": "^2.0.0-rc.3",
-    "lodash.get": "^4.4.2",
-    "lodash.isarray": "^4.0.0",
-    "lodash.isempty": "^4.2.1",
-    "lodash.isplainobject": "^4.0.4",
-    "node-uuid": "^1.4.7",
-    "reekoh": "^1.0.2",
-    "request": "^2.72.0"
+    "async": "=2.0.0-rc.3",
+    "lodash.get": "=4.4.2",
+    "lodash.isarray": "=4.0.0",
+    "lodash.isempty": "=4.2.1",
+    "lodash.isplainobject": "=4.0.4",
+    "node-uuid": "=1.4.7",
+    "reekoh": "=1.0.2",
+    "request": "=2.72.0"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-cli": "^1.2.1",
-    "gulp-jshint": "^2.0.0",
-    "gulp-json-lint": "^0.1.0",
-    "gulp-mocha": "^2.2.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-standard": "^8.0.4",
-    "mocha": "^2.4.5",
-    "should": "^8.3.0"
+    "gulp": "=3.9.1",
+    "gulp-cli": "=1.2.1",
+    "gulp-jshint": "=2.0.0",
+    "gulp-json-lint": "=0.1.0",
+    "gulp-mocha": "=2.2.0",
+    "gulp-plumber": "=1.1.0",
+    "gulp-standard": "=8.0.4",
+    "mocha": "=2.4.5",
+    "should": "=8.3.0"
   },
-  "license": "LGPL-3.0"
+  "license": "GPL 3.0"
 }
